# mcp-scrt

./: Architecture.md  CHECKPOINT_PHASE1C.md  Get-Started.md  Implementation-Plan.md  MCP-INTEGRATION.md  Notes.md  Progress.md  README.md  coverage.xml  debug_chroma.py  debug_chroma2.py  debug_redis.py  debug_redis_remote.py  pyproject.toml  requirements.txt  scrt-mcp-commands.md  scrt-mcp-quickstart.md
src/mcp_scrt/: __main__.py  config.py  constants.py  types.py
src/mcp_scrt/core/: cache.py  security.py  session.py  validation.py
src/mcp_scrt/integrations/: chromadb_client.py  redis_client.py
src/mcp_scrt/middleware/: __init__.py  cache_middleware.py  graph_middleware.py  telemetry.py
src/mcp_scrt/prompts/: __init__.py  contracts.py  guide.py
src/mcp_scrt/resources/: __init__.py  network.py  session.py  validators.py  wallets.py
src/mcp_scrt/sdk/: client.py  wallet.py
src/mcp_scrt/services/: __init__.py  cache_service.py  embedding_service.py
src/mcp_scrt/tools/: __init__.py  account.py  bank.py  base.py  blockchain.py  contract.py  governance.py  ibc.py  network.py  rewards.py  staking.py  transaction.py  wallet.py
src/mcp_scrt/utils/: errors.py  logging.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_caching.py  test_chromadb_client.py  test_contract_workflow.py  test_embedding_service.py  test_error_scenarios.py  test_redis_client.py  test_staking_workflow.py  test_transfer_workflow.py
tests/unit/: test_cache.py  test_cache_middleware.py  test_cache_service.py  test_client.py  test_config.py  test_constants.py  test_errors.py  test_graph_middleware.py  test_security.py  test_session.py  test_telemetry.py  test_tools_account.py  test_tools_bank.py  test_tools_base.py  test_tools_blockchain.py  test_tools_contract.py  test_tools_governance.py  test_tools_ibc.py  test_tools_network.py  test_tools_rewards.py  test_tools_staking.py  test_tools_transaction.py  test_tools_wallet.py  test_types.py  test_validation.py  test_wallet.py
